[package]
name = "robust_determinant"
version = "0.1.0"
authors = ["Titus Tienaah <titus.intdxdt@gmail.com>"]
edition = "2018"

[dependencies]
robust_sum = { git = "https://github.com/intdxdt/robust_sum", branch = "master" }
two_product = { git = "https://github.com/intdxdt/two_product", branch = "master" }
robust_scale = { git = "https://github.com/intdxdt/robust_scale", branch = "master" }
robust_subtract = { git = "https://github.com/intdxdt/robust_subtract", branch = "master" }
robust_compress_seq = { git = "https://github.com/intdxdt/robust_compress_seq", branch = "master" }

